# snippets-cpp

./: .gitignore  CMakeLists.txt  README.md  generate.cpp
bash/: gen-vscode.sh  run-tests.sh
include/: split.h
src/: generate.cpp  split.cpp  test.cpp
